--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,8 @@ Metrics/PerceivedComplexity:
   Enabled: false
 Metrics/CyclomaticComplexity:
   Enabled: false
+Metrics/ModuleLength:
+  Enabled: false
 
 
 
